k8s/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: blue

  template:
    metadata:
      labels:
        app: frontend
        version: blue

    spec:
      containers:
      - name: frontend-blue
        image: frontend-basic:v1
        ports:
        - containerPort: 3000
