k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: green

  template:
    metadata:
      labels:
        app: frontend
        version: green

    spec:
      containers:
      - name: frontend-green
        image: frontend-enhanced:v1
        ports:
        - containerPort: 3000
