k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  selector:
    app: frontend
    version: blue

  ports:
  - port: 80
    targetPort: 3000

  type: NodePort
