k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: bluegreen.local

    http:
      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: frontend

            port:
              number: 80
